feat(java): 完成 collections 子目录的 README 和代码示例
- 包含 ArrayList、LinkedList、HashMap、LinkedHashMap、TreeMap、
  ConcurrentHashMap、Queue 等核心集合的详解
- 每个主题附带中文注释的代码示例和面试题
- 覆盖 fail-fast vs fail-safe、扩容机制、红黑树转换等高频考点